Changed the process of the apimedicapi request and added an additional feature that pulls suggesested requests from the api based on the current symptoms

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "Samsungs1212",
     "database": "exampledb",
     "host": "localhost",
     "dialect": "mysql"
