--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6",
-    "simple-oauth2": "^2.4.0"
+    "simple-oauth2": "^2.4.0",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
